<resources>
    <string name="app_name" translatable="false">ANDRAX Mobile Pentest</string>
    <string name="andrax_version_link">https://andrax.thecrackertechnology.com/version4</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="andraxdescmain">ANDRAX is a distribution of Pentest mobile developed by Weidsom Nascimento of The Cracker Technology, ANDRAX is fully portable for any Android smartphone, it is not recommended to use in tablets.</string>
    <string name="titlediainstall">"INSTALL ANDRAX!!!"</string>
    <string name="descdiainstall">\nANDRAX is not yet installed on the system!\n\nDo you want to install ANDRAX now?\n\nPress \"OK\" and ANDRAX will automatically download and install the core!</string>
    <string name="exittitle">Exit?</string>
    <string name="descexit">Are you sure you want to end ANDRAX?</string>
    <string name="title_activity_vmp" translatable="false">VAMPIRE EVIL AP</string>
    <string name="title_activity_http_leak" translatable="false">Http-LEAK v0.2</string>
    <string name="title_activity_web_mythr" translatable="false">WebMYTHR</string>
    <string name="title_activity_postfuzzer" translatable="false">POST Fuzzer</string>
    <string name="title_activity_fuzzer_post_attack" translatable="false">POST Fuzzer ATTACK</string>
    <string name="title_activity_postfuzzer_result" translatable="false">POST Fuzzer Result</string>
    <string name="titlediaabout">About ANDRAX</string>
    <string name="descdiaabout">ANDRAX is a Mobile Penetration Testing distribution developed by The Cracker Technology - Advanced Pentest under the command of Weidsom Nascimento, ANDRAX was created to destroy Pentest Mobile systems monopoly. Specifically, an alternative to the NETHUNTER system that is nothing more than only a shit poorly developed emulation!\n\nANDRAX was created to run in conjunction with Android without damaging your handset or modifying it, Support almost all modern handsets being compatible with Android 5 and above\n\nANDRAX is a great evolution showing that the future of hacking is mobile!\n\nDate beginning: 08/09/2016\n\nReloaded on: 05/10/2018\n\nDevelopers:\nWeidsom Nascimento.\n\nSpecial thanks:\n<b>Jessica Helena</b>\n\n
    </string>
    <string name="title_activity_dir_scanner" translatable="false">Dir/File Scanner</string>
    <string name="title_activity_airodump" translatable="false">Airdump-ng VIEWER</string>
    <string name="title_activity_hidattack" translatable="false">HID Cracker</string>
    <string name="title_activity_axweb_server" translatable="false">AXWebServer</string>
    <string name="busyoftitle">BusyBox not installed!</string>
    <string name="busyofdesc">You do not have a BusyBox installed or it is not installed in the correct place \"/system/xbin\" ANDRAX needs a busybox\nClick \"OK\" and ANDRAX will install it.</string>
    <string name="busyboxnottitle">Unofficial BusyBox!</string>
    <string name="busyboxnotdesc">ANDRAX could not find the official busybox, click \"OK\" and ANDRAX will perform the installation of ANDRAX BusyBox or click \"FORCE INSTALL\" to force installtion and never ask.\n\nThis can be dangerous ANDRAX need your own busybox to work properly!!!</string>
    <string name="acra_dialog_text">ANDRAX has CRASHED Send US a Report!!!</string>
    <string name="acra_dialog_comment">We need you to submit this report so we can correct the errors.</string>
    <string name="acra_dialod_title">ANDRAX has CRASHED!</string>
    <string name="title_activity_marin">"M.A.R.I.N.A. "</string>
    <string name="title_activity_toptools">TOP Tools</string>
    <string name="copy_text">Copy</string>
    <string name="paste_text">Paste</string>
    <string name="super_paste_text">Super Paste</string>
    <string name="text_selection_more">More</string>
    <string name="toggle_tab_switcher_menu_item">Toggle Tabs</string>
    <string name="new_session">New Session</string>
    <string name="new_session_more">New Session…</string>
    <string name="new_system_session">New System Shell</string>
    <string name="service_status_text">%d session(s)</string>
    <string name="service_lock_acquired"> (Wake Locked)</string>
    <string name="service_acquire_lock">Acquire Lock</string>
    <string name="service_release_lock">Release Lock</string>
    <string name="setup_info">Hello, NeoTerm</string>
    <string name="setup_next">Let\'s Go!</string>
    <string name="setup_setup_method">Select your installation method</string>
    <string name="setup_online">Online Setup</string>
    <string name="setup_local">Local Zip File Setup</string>
    <string name="setup_backup">Restore from NeoTerm Backup</string>
    <string name="setup_source_parameter">Source Parameter</string>
    <string name="setup_input_source_parameter">Input source parameter…</string>
    <string name="setup_dots" translatable="false">…</string>
    <string name="setup_hint_online">URL of mirror that contains setup zip files</string>
    <string name="setup_hint_local">File path to showConfirmDialog zip files</string>
    <string name="setup_hint_backup">File path to backup file(*.neobackup)</string>
    <string name="setup_error_file_not_found">File not found</string>
    <string name="setup_error_invalid_url">Invalid URL</string>
    <string name="setup_error_no_internet">No Internet connection</string>
    <string name="setup_error_connection_failed">Failed to connect to server</string>
    <string name="setup_error_parameter_null">Setup parameter is null</string>
    <string name="setup_preparing">Preparing…</string>
    <string name="setup_confirm">Finish Setup</string>
    <string name="setup_confirm_text">Everything goes well till now, continue?</string>
    <string name="setup_reset_confirm">Reset Confirm</string>
    <string name="setup_reset_confirm_text">This operation will clear all your data! Continue?</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="general_settings_desc">Bell, Vibrate, Shell, Initial Command</string>
    <string name="ui_settings">UI Settings</string>
    <string name="ui_settings_desc">FullScreen, Title Bar, Animation</string>
    <string name="package_settings">Package Settings</string>
    <string name="package_settings_desc">Source, Updates, Upgrades</string>
    <string name="customization_settings_desc">Font, ColorScheme</string>
    <string name="customization_settings">Customization</string>
    <string name="toggle_ime">Toggle Keyboard</string>
    <string name="float_up">Float Up</string>
    <string name="shell_not_found">Shell %s not found</string>
    <string name="shell_not_found_message">Would you like you install it?</string>
    <string name="fullscreen_mode_changed">FullScreen mode changed, please restart NeoTerm.</string>
    <string name="permission_denied">NeoTerm cannot get essential permissions, exiting.</string>
    <string name="error">Oops!</string>
    <string name="use_system_shell">System Shell</string>
    <string name="retry">Retry</string>
    <string name="source_changed">APT source changed, you may get it updated by executing: apt update</string>
    <string name="done">Done</string>
    <string name="install">Install</string>
    <string name="package_details">Package: %s\nVersion: %s\nDepends: %s\nInstalled Size: %s\nDescription: %s\nHome Page: %s</string>
    <string name="package_list_empty">Package list is empty, please check out your source.</string>
    <string name="menu_refresh_list">Refresh</string>
    <string name="menu_update">Update and Refresh</string>
    <string name="install_font">Install Font</string>
    <string name="install_color">Install Color Scheme</string>
    <string name="crash_model">Model: %s</string>
    <string name="crash_app">App: %s</string>
    <string name="crash_stack_trace">Stack Trace</string>
    <string name="installer_message">Installing</string>
    <string name="installer_install_zsh_required">We will install oh-my-zsh and switch your login program to zsh</string>
    <string name="pref_general_bell">Bell</string>
    <string name="pref_general_bell_desc">Bell when receiving \'\\a\'</string>
    <string name="pref_general_vibrate">Vibrate</string>
    <string name="pref_general_vibrate_desc">Vibrate when receiving \'\\a\'</string>
    <string name="pref_general_backspace_map_to_esc">BackSpace Mapped to Esc</string>
    <string name="pref_general_backspace_map_to_esc_desc">Send esc when backspace is pressed</string>
    <string name="pref_general_shell">Login Program</string>
    <string name="pref_general_shell_desc">Which program should we use as shell when login</string>
    <string name="pref_general_initial_command">Initial Command</string>
    <string name="pref_general_initial_command_desc">Execute commands when a session is being created</string>
    <string name="pref_general_auto_completion">Auto Completion(Experimental)</string>
    <string name="pref_general_auto_completion_desc">Enable complete things when typing commands or path. This is still work in progress with lots of bugs to deal with</string>
    <string name="pref_general_volume_as_control">Use volume up and down as special keys</string>
    <string name="pref_general_volume_as_control_desc">Volume Down as Ctrl\nVolume Up as FN</string>
    <string name="pref_general_use_execve_wrapper">Use execve() wrapper</string>
    <string name="pref_general_use_execve_wrapper_desc">Hook execve() to avoid incorrect shebang</string>
    <string name="pref_general_enable_word_based_ime">Enable word based IME</string>
    <string name="pref_general_enable_word_based_ime_desc">Word based or char based IME</string>
    <string name="pref_ui_fullscreen">Full Screen</string>
    <string name="pref_ui_hide_toolbar">Hide Toolbar</string>
    <string name="pref_ui_hide_toolbar_desc">Hide toolbar when keyboard is showing</string>
    <string name="pref_ui_close_tab_anim_next_tab">Next tab animation</string>
    <string name="pref_ui_close_tab_anim_next_tab_desc">Switch to the next tab instead of the previous tab when closing tab</string>
    <string name="pref_ui_eks_weight_explicit">Use explicit weight for ExtraKeysView</string>
    <string name="pref_ui_eks_weight_explicit_desc">If ExtraKeysView shows incorrectly, please enable this</string>
    <string name="pref_ui_eks_enabled">Show extra keys</string>
    <string name="pref_ui_eks_enabled_desc">Some useful keys like arrow, esc, tab, etc.</string>
    <string name="pref_customization_font">Font</string>
    <string name="pref_customization_color_scheme">Color Scheme</string>
    <string name="pref_customization_eks">Extra Keys</string>
    <string name="pref_package_source">Source</string>
    <string name="exit">Exit</string>
    <string name="term_here">Term Here</string>
    <string name="user_script">User Script</string>
    <string name="command_shortcut">Command Shortcut</string>
    <string name="no_user_script_found">No user script found (Did you forget to set executable permissions?)</string>
    <string name="no_files_selected">No files selected\n\n(raw Intent: %s)</string>
    <string name="unsupported_term_here">Unsupported term here\n\n(raw Intent: %s)</string>
    <string name="files_to_handle">Files to Handle</string>
    <string name="available_user_scripts">Available User Scripts</string>
    <string name="confirm_remove_file_from_list">Remove file from list?</string>
    <string name="confirm_remove">Remove?</string>
    <string name="command_shortcut_display_title">Title</string>
    <string name="command_shortcut_command">Command</string>
    <string name="no_command_extra">No command provided, did you put extras?</string>
</resources>