<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:icon="@drawable/ic_general_white_36dp"
        android:summary="@string/general_settings_desc"
        android:title="@string/general_settings">
        <intent
            android:targetClass="com.thecrackertechnology.dragonterminal.ui.settings.GeneralSettingsActivity"
            android:targetPackage="com.thecrackertechnology.andrax" />
    </Preference>

    <Preference
        android:icon="@drawable/ic_ui_white_36dp"
        android:summary="@string/ui_settings_desc"
        android:title="@string/ui_settings">
        <intent
            android:targetClass="com.thecrackertechnology.dragonterminal.ui.settings.UISettingsActivity"
            android:targetPackage="com.thecrackertechnology.andrax" />
    </Preference>

    <Preference
        android:icon="@drawable/ic_customization_white_36dp"
        android:summary="@string/customization_settings_desc"
        android:title="@string/customization_settings">
        <intent
            android:targetClass="com.thecrackertechnology.dragonterminal.ui.customize.CustomizeActivity"
            android:targetPackage="com.thecrackertechnology.andrax" />
    </Preference>

    <!--Preference
        android:icon="@drawable/ic_apps_white_36dp"
        android:summary="@string/package_settings_desc"
        android:title="@string/package_settings">
        <intent
            android:targetClass="com.thecrackertechnology.dragonterminal.ui.pm.PackageManagerActivity"
            android:targetPackage="com.thecrackertechnology.dragonterminal" />
    </Preference-->

    <!--Preference
        android:icon="@drawable/ic_info_white_36dp"
        android:title="@string/about" >
        <intent
            android:targetClass="com.thecrackertechnology.dragonterminal.ui.support.AboutActivity"
            android:targetPackage="com.thecrackertechnology.dragonterminal" />
    </Preference-->

</PreferenceScreen>