<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/dco_menu"
        android:title="Tools"
        app:showAsAction="always"
        android:icon="@drawable/tools">
        <menu>
            <item
                android:id="@+id/dco_information"
                android:title="01 Information Gathering" />
            <item
                android:id="@+id/dco_scanning"
                android:title="02 Scanning" />
            <item
                android:id="@+id/dco_packet"
                android:title="03 Packet Crafting" />
            <item
                android:id="@+id/dco_network"
                android:title="04 Network Hacking" />
            <item
                android:id="@+id/dco_website"
                android:title="05 WebSite Hacking" />
            <item
                android:id="@+id/dco_password"
                android:title="06 Password Hacking" />
            <item
                android:id="@+id/dco_wireless"
                android:title="07 Wireless Hacking" />
            <item
                android:id="@+id/dco_exploitation"
                android:title="08 Exploitation" />
            <item
                android:id="@+id/dco_stress"
                android:title="09 Stress Testing" />
            <item
                android:id="@+id/dco_phishing"
                android:title="10 Phishing" />
            <item
                android:id="@+id/dco_voip"
                android:title="11 Voip/3G/4G/UMTS/LTE" />
            <item
                android:id="@+id/dco_ics_scada"
                android:title="12 ICS/SCADA/IIoT/IoT" />

        </menu>
    </item>


    <item
        android:id="@+id/toggle_tab_switcher_menu_item"
        android:title="@string/toggle_tab_switcher_menu_item"
        app:actionLayout="@layout/tab_switcher_menu_item"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_item_recovery"
        android:title="Enable recovery mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_new_session"
        android:title="@string/new_session"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_howtohack"
        android:title="How to hack"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>